--- a/Kuis_2.ipynb
+++ b/Kuis_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNn/Wdmv6qNlHSWYW5zpxJm",
+      "authorship_tag": "ABX9TyMu9FndktLszU5exFjFj/pa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "YJJbvsVmLsLD"
       },
@@ -67,7 +67,7 @@
         "id": "-j_N_cr9L7-s",
         "outputId": "312fd9dd-65be-4aa5-9b7f-8312231d6d46"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +93,7 @@
         "id": "PWmytIZdL5JJ",
         "outputId": "b5bc3f5b-7ca0-4b5b-acdf-e2b6a9d258ea"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -362,7 +362,7 @@
         "id": "XzQ05o6rMEFo",
         "outputId": "db53b668-d5b8-411f-d671-15ff2af3c46c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -771,7 +771,7 @@
         "id": "uhQFjUcdMHur",
         "outputId": "31a493f8-31b6-49ec-e4d0-6d3d90c0deb3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -814,7 +814,7 @@
         "id": "zy3FsAuBMKw2",
         "outputId": "6eb20bd2-a81a-4503-ec88-b7310a344d49"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -969,7 +969,7 @@
         "id": "6H-gDcJ9MdhZ",
         "outputId": "c4375dd2-888b-4488-f35d-69081cdb41d7"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1008,7 +1008,7 @@
         "id": "8x_QXkTnMiD2",
         "outputId": "2e538da9-4ac8-4fd6-8fa3-52173cccd1fe"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1070,7 +1070,7 @@
         "id": "0Rrf2dGEMu-U",
         "outputId": "0a9c4d58-d670-4dc8-a054-6e55ccce075e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1104,7 +1104,7 @@
       "metadata": {
         "id": "Iw5Xb8PpM-JR"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1126,7 +1126,7 @@
       "metadata": {
         "id": "XbHaaTE1NJYH"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1141,7 +1141,7 @@
         "id": "vxFs7U9-Nv_k",
         "outputId": "c65fac71-a198-49f6-d767-76f691572156"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1178,7 +1178,7 @@
       "metadata": {
         "id": "pP6eeD3MN0K8"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1189,7 +1189,57 @@
       "metadata": {
         "id": "4CB-_GlIOxgI"
       },
-      "execution_count": 35,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mlp = MLPClassifier(hidden_layer_sizes=(13,13,13),max_iter=500)\n",
+        "mlp.fit(X_train,y_train)"
+      ],
+      "metadata": {
+        "id": "JfduF3BwWBdV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions = mlp.predict(X_test)\n",
+        "\n",
+        "acc_rf = accuracy_score(y_test, y_pred_rf)\n",
+        "print(\"Test set accuracy: {:.2f}\".format(acc_rf))\n",
+        "print(f\"Test set accuracy: {acc_rf}\")"
+      ],
+      "metadata": {
+        "id": "4jVrXjHJWCEA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**NO 6 - CONFUSION MATRIX**"
+      ],
+      "metadata": {
+        "id": "JvFmrlzaWFJK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
+        "\n",
+        "print(confusion_matrix(y_test, predictions))\n",
+        "print(classification_report(y_test, predictions))"
+      ],
+      "metadata": {
+        "id": "fCouJ1HXWNUC"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1211,8 +1261,79 @@
       "metadata": {
         "id": "8_HuJ_F1OE9w"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.model_selection import RandomizedSearchCV\n",
+        "\n",
+        "dt = DecisionTreeClassifier()\n",
+        "\n",
+        "params = {\n",
+        "    'criterion': ['gini', 'entropy'],\n",
+        "    'max_depth': list(range(5,11))\n",
+        "}\n",
+        "\n",
+        "random = RandomizedSearchCV(dt, params, cv=cv)\n",
+        "\n",
+        "%timeit random.fit(X, y)\n",
+        "\n",
+        "score = random.score(X,y)\n",
+        "\n",
+        "print(f'Hasil evaluasi: {score}')\n",
+        "print(f'Konfigurasi hyperparameter: {random.best_params_}')"
+      ],
+      "metadata": {
+        "id": "N5iFe_O9WWaA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**GRID SEARCH**"
+      ],
+      "metadata": {
+        "id": "cf2L-DxEWXmH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "params = {\n",
+        "    'criterion': ['gini', 'entropy'],\n",
+        "    'max_depth': list(range(5,11))\n",
+        "}\n",
+        "\n",
+        "grid = GridSearchCV(dt, param_grid=params, cv=cv)\n",
+        "\n",
+        "%timeit grid.fit(X, y)\n",
+        "\n",
+        "score = grid.score(X,y)\n",
+        "\n",
+        "print(f'Hasil evaluasi: {score}')\n",
+        "print(f'Konfigurasi hyperparameter: {grid.best_params_}')"
+      ],
+      "metadata": {
+        "id": "VUoEkoIBWaW6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**MLP CLASSIFIER**"
+      ],
+      "metadata": {
+        "id": "J_4R6eYGWdyM"
+      }
     },
     {
       "cell_type": "code",
@@ -1230,7 +1351,7 @@
         "id": "ncQfQIyGOXcD",
         "outputId": "f95fc885-3f40-4e4a-d168-7a0e949a95cb"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
